--- a/index.html
+++ b/index.html
@@ -30,11 +30,21 @@ s0.parentNode.insertBefore(s1,s0);
 </head>
 <body>
   <h1>Monitoring, Evaluation and Surveillance of TB Programs</h1>
-  
+
+Design Meeting Links:
+<p>Course Strategy</p>
+<p>List of Existing Course List</p>
+<p>Capacity Building WOrkshop Agenda Crosswalk</p>
+<p>Course Map V 3- Miro</p>
+<p>Design Meeting Collaboration Space - Miro</p>
+
+<h3>What's Possible and What's Sustianable</h3>
+<p>Moodle Course Mockup</p>
+<p>Tawk Knowledge Center</p>
+<p>Articulate Rise Mockup </p>	
+
 <a href="https://tally.so#tally-open=wMXEoM&tally-layout=modal&tally-emoji-text=👋&tally-emoji-animation=tada">Self-Assessment Example</a>
 	
-<p>Embedded form:</p>	
-	<iframe data-tally-src="https://tally.so/embed/wMXEoM?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="1726" frameborder="0" marginheight="0" marginwidth="0" title="TB M&E: Self-Assessment"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
 </body>
 </html>
 
