--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 <meta name="keywords" content="TB, tuberculosis, TB DIAH, USAID, monitoring and evaluation of TB programs" />
 <meta http-equiv="content-language" content="en">
 <title>Online Learning: M&amp;E of TB Programs</title>
-<link href="cenat.css" rel="stylesheet" type="text/css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&family=Siemreap&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">	
+<link href="css/main.css" rel="stylesheet" type="text/css">
+<link href="css/grid.css" rel="stylesheet" type="text/css">	
+<meta name="viewport" content="width=device-width, user-scalable=no"/>
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -25,11 +28,94 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->	
-	
+
 <script async src="https://tally.so/widgets/embed.js"></script>
 </head>
 <body>
-<h1>Monitoring, Evaluation and Surveillance of TB Programs</h1>	
+<div id="banner"></div>
+<div id="content">
+<h1>Monitoring &amp; Evaluation of TB Programs <br>
+</h1>
+  <div class="play_box">
+	    <div class="section group">
+	<div class="col span_1_of_4">
+	    <p>
+	      PREP TIME<br>
+	      <img src="images/prep_time.png" width="80" height="80" alt=""/>
+	      <br>
+	      20 minutes
+        </p>
+	</div>
+	<div class="col span_1_of_4">
+ <p> COURE TIME<br>
+	      <img src="images/Time.png" width="80" height="80" alt=""/>
+	      <br>
+	      2 Hours</p>
+	</div>
+	<div class="col span_1_of_4">
+	    <p>DIFFICULTY<br>
+	      <img src="images/Difficulty-medium.png" width="80" height="80" alt=""/>	<br>
+	      Medium
+        </p>
+	</div>
+				<div class="col span_1_of_4">
+	    <p>DOWNLOAD RESOURCES<br>
+          <a href="INL_PREP_Virtual_Playbook.pdf" target="_blank"><img src="images/Download.png" alt="" width="80" height="80" border="0"/></a>	<br>
+	      Grab it!
+        </p>
+	</div>
+</div></div>
+	<div id="playbook">
+<div class="section group">
+  <div class="col span_2_of_3">
+  <div class="step">Step 1</div>
+  <h2> Take a Self - Assessment</h2>
+  <p>Identify  your strengths and growth areas  in TB M&amp;E across the following domains: </p>
+  <p>1. Epidemiology of Tuberculosis</p>
+  <p>2.  M&amp;E Fundamentals</p>
+  <p>3. Data Quality</p>
+  <p>4.  Data Analysis, Interpretation and Visualization</p>
+  <p>5. Data Communication and Use or Data for Decision Making</p>
+	</div>
+	<div class="col span_1_of_3"><br>
+	<div class="side_box" style="margin-top: 250px;"><img src="images/pro_tip.png" width="50" height="50" alt="check"/>
+	  <h4>Pro Tip</h4>
+	  <p>Check out the Knowledge Center for Key resources in each topic area.</p>
+	</div>
+	</div></div>
+	<div class="section group">
+	<div class="col span_2_of_3">
+	<div class="step">Step 2</div>
+  <h2>Start Learning</h2>
+  <a class="button" href="#">Launch Course </a>
+  <ul>
+  </ul>
+	</div>
+		<div class="col span_1_of_3"><br>
+	<div class="side_box" style="margin-top: 100px;"><img src="images/pro_tip.png" width="50" height="50" alt="check"/>
+	  <h4>Pro Tip</h4>
+	  <br><br>
+	</div>
+		</div></div>
+	  <div class="section group">
+	    <div class="col span_2_of_3">
+	   <div class="step">Step 3</div>
+  <h2>Share Your Experience</h2>
+  <p>Join our Community</p>
+	    </div>
+		<div class="col span_1_of_3"><br>
+	<div class="side_box" style="margin-top: 150px;"><img src="images/pro_tip.png" width="50" height="50" alt="check"/>
+	  <h4>Pro Tip</h4>
+	  <p> <br>
+	  </p>
+	</div>
+		</div>
+</div>
+
+
+
+</body>
+</html>	
+
 </body>
 </html>
-
