--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ var MemberSpace = window.MemberSpace || {"subdomain":"tbdiah"};
 <div id="content">
 <h1>Monitoring &amp; Evaluation of TB Programs <br>
 </h1>
-	https://tbdiah.memberspace.com/member/sign_in
+
+	<a href="https://tbdiah.memberspace.com/member/sign_in"> SIGN IN </a>
   <div class="play_box">
 	    <div class="section group">
 	<div class="col span_1_of_4">
