--- a/congrats.html
+++ b/congrats.html
@@ -13,7 +13,7 @@
   <canvas id="confetti-canvas"></canvas>
 Congratulations!
   <!-- Include the canvas-confetti library -->
- <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/index.min.js"></script>
+<script src="https://unpkg.com/canvas-confetti@1.4.0/dist/confetti.min.js"></script>
   <!-- Include your confetti.js file -->
   <script src="confetti.js"></script>
 </body>
