--- a/congrats.html
+++ b/congrats.html
@@ -11,6 +11,7 @@
 
 <body>
   <canvas id="confetti-canvas"></canvas>
+  <div id="confetti-container" style="display:none;"></div>
 Congratulations!
   <!-- Include the canvas-confetti library -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
