--- a/congrats.html
+++ b/congrats.html
@@ -11,10 +11,9 @@
 
 <body>
   <canvas id="confetti-canvas"></canvas>
-  <div id="confetti-container" style="display:none;"></div>
 Congratulations!
   <!-- Include the canvas-confetti library -->
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/Agezao/confetti-js@1.0.0/src/confetti.js"></script>
   <!-- Include your confetti.js file -->
   <script src="confetti.js"></script>
 </body>
