--- a/congrats.html
+++ b/congrats.html
@@ -10,10 +10,14 @@
 </head>
 
 <body>
-  <canvas id="confetti-canvas"></canvas>
-Congratulations!
+<div id="banner"></div>
+	<div id="content"> Congratulations!</div>
+<canvas id="confetti-canvas"></canvas>
+ <div id="confetti-container" style="display:none;"></div>
+	<div class="content">Congratulations!</div>
   <!-- Include the canvas-confetti library -->
-<script src="https://cdn.jsdelivr.net/gh/Agezao/confetti-js@1.0.0/src/confetti.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
+
   <!-- Include your confetti.js file -->
   <script src="confetti.js"></script>
 </body>
