--- a/congrats.html
+++ b/congrats.html
@@ -14,9 +14,36 @@
 	<div id="content"> Congratulations!</div>
 <canvas id="confetti-canvas"></canvas>
  <div id="confetti-container" style="display:none;"></div>
-  <!-- Include the canvas-confetti library -->
+<div class="accordion">
+  <div class="accordion-item">
+    <div class="accordion-header">
+      <h3>Accordion Header 1</h3>
+      <span class="accordion-icon"></span>
+    </div>
+    <div class="accordion-content">
+      <p>Accordion Content 1</p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <div class="accordion-header">
+      <h3>Accordion Header 2</h3>
+      <span class="accordion-icon"></span>
+    </div>
+    <div class="accordion-content">
+      <p>Accordion Content 2</p>
+    </div>
+  </div>
+  ...
+</div>
+  
+	
+	
+	<!-- Include the canvas-confetti library -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
+
   <!-- Include your confetti.js file -->
   <script src="confetti.js"></script>
+  <script src="accordian.js"></script>
+	
 </body>
 </html>
