--- a/resources.html
+++ b/resources.html
@@ -11,11 +11,12 @@
 
 <body>
 <div id="banner"></div>
-	<div id="content">Check out these Resources
+	<div id="content">
+		<h2>Check out these Resources</h2>
 	<div class="accordion">
   <div class="accordion-item">
     <div class="accordion-header">
-      <h3>Epidemiology of TB</h3>
+      <h3>Epidimilogy of TB</h3>
       <span class="accordion-icon"></span>
     </div>
     <div class="accordion-content">
@@ -33,7 +34,7 @@
       <p>Donec sed tellus sem. Vivamus sit amet lacus at mi lobortis vulputate. Nam condimentum eleifend aliquam. Praesent feugiat nibh quis quam iaculis, at ultricies orci pharetra. Sed tincidunt erat vel nulla sollicitudin venenatis. Ut ac erat fermentum, sollicitudin orci eget, iaculis ex. Sed vitae enim id elit consequat facilisis vel vel lectus.</p>
     </div>
   </div>
-</div>	</div>
-  <script src="accordian.js" type="text/javascript"></script>	
+		</div>	</div>
+  <script src="accordion.js" type="text/javascript"></script>	
 </body>
 </html>
