--- a/resources.html
+++ b/resources.html
@@ -35,5 +35,7 @@
   </div>
 		</div>	</div>
   <script src="accordion.js" type="text/javascript"></script>	
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </body>
 </html>
