--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@
 	<div class="accordion">
   <div class="accordion-item">
     <div class="accordion-header">
-      <h3>Epidimilogy of TB</h3>
+      <h3>Epidemiology of TB</h3>
       <span class="accordion-icon"></span>
     </div>
     <div class="accordion-content">
@@ -25,7 +25,7 @@
   </div>
   <div class="accordion-item">
     <div class="accordion-header">
-      <h3>Accordion Header 2</h3>
+      <h3>Basics of Monitoring, Evaluaton and Surveillance</h3>
       <span class="accordion-icon"></span>
     </div>
     <div class="accordion-content">
@@ -35,7 +35,6 @@
   </div>
 		</div>	</div>
   <script src="accordion.js" type="text/javascript"></script>	
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </body>
 </html>
