--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,7 @@
   </div>
   <div class="accordion-item">
     <div class="accordion-header">
-      <h3>Basics of Monitoring, Evaluaton and Surveillance</h3>
+      <h3>Basics of Monitoring, Evaluation and Surveillance</h3>
       <span class="accordion-icon"></span>
     </div>
     <div class="accordion-content">
