--- a/index.html
+++ b/index.html
@@ -28,23 +28,14 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->	
-<script>
-var MemberSpace = window.MemberSpace || {"subdomain":"tbdiah"};
-(function(d){
-  var s = d.createElement("script");
-  s.src = "https://cdn.memberspace.com/scripts/widgets.js";
-  var e = d.getElementsByTagName("script")[0];
-  e.parentNode.insertBefore(s,e);
-}(document));
-</script>
+
+<script async src="https://tally.so/widgets/embed.js"></script>
 </head>
 <body>
 <div id="banner"></div>
 <div id="content">
 <h1>Monitoring &amp; Evaluation of TB Programs <br>
 </h1>
-
-	<a href="https://tbdiah.memberspace.com/member/sign_in"> SIGN IN </a>
   <div class="play_box">
 	    <div class="section group">
 	<div class="col span_1_of_4">
@@ -52,14 +43,14 @@ var MemberSpace = window.MemberSpace || {"subdomain":"tbdiah"};
 	      PREP TIME<br>
 	      <img src="images/prep_time.png" width="80" height="80" alt=""/>
 	      <br>
-	      20 minutes
+	      5-15 minutes
         </p>
 	</div>
 	<div class="col span_1_of_4">
  <p> COURE TIME<br>
 	      <img src="images/Time.png" width="80" height="80" alt=""/>
 	      <br>
-	      2 Hours</p>
+	      2.5 Hours</p>
 	</div>
 	<div class="col span_1_of_4">
 	    <p>DIFFICULTY<br>
