--- a/congrats.html
+++ b/congrats.html
@@ -11,39 +11,16 @@
 
 <body>
 <div id="banner"></div>
-	<div id="content"> Congratulations!</div>
+	<div id="content"> <h1 style="text-align: center;">Congratulations!<br/><br>
+You have completed the course!</h1>
 <canvas id="confetti-canvas"></canvas>
  <div id="confetti-container" style="display:none;"></div>
-<div class="accordion">
-  <div class="accordion-item">
-    <div class="accordion-header">
-      <h3>Accordion Header 1</h3>
-      <span class="accordion-icon"></span>
-    </div>
-    <div class="accordion-content">
-      <p>Accordion Content 1</p>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <div class="accordion-header">
-      <h3>Accordion Header 2</h3>
-      <span class="accordion-icon"></span>
-    </div>
-    <div class="accordion-content">
-      <p>Accordion Content 2</p>
-    </div>
-  </div>
-  ...
-</div>
-  
-	
-	
 	<!-- Include the canvas-confetti library -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 
   <!-- Include your confetti.js file -->
-  <script src="confetti.js"></script>
-  <script src="accordian.js"></script>
+  <script src="confetti.js" type="text/javascript"></script>
+</div>
 	
 </body>
 </html>
