--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <title>Online Learning: M&amp;E of TB Programs</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&family=Siemreap&display=swap" rel="stylesheet"> 
-<link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">	
+<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200;300;400;500;600;700;800&family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet" type="text/css">
 <link href="css/grid.css" rel="stylesheet" type="text/css">	
 <meta name="viewport" content="width=device-width, user-scalable=no"/>
@@ -28,94 +27,46 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->	
-
-<script async src="https://tally.so/widgets/embed.js"></script>
 </head>
 <body>
-<div id="banner"></div>
-<div id="content">
-<h1>Monitoring &amp; Evaluation of TB Programs <br>
-</h1>
-  <div class="play_box">
-	    <div class="section group">
-	<div class="col span_1_of_4">
-	    <p>
-	      PREP TIME<br>
-	      <img src="images/prep_time.png" width="80" height="80" alt=""/>
-	      <br>
-	      5-15 minutes
-        </p>
-	</div>
-	<div class="col span_1_of_4">
- <p> COURE TIME<br>
-	      <img src="images/Time.png" width="80" height="80" alt=""/>
-	      <br>
-	      2.5 Hours</p>
-	</div>
-	<div class="col span_1_of_4">
-	    <p>DIFFICULTY<br>
-	      <img src="images/Difficulty-medium.png" width="80" height="80" alt=""/>	<br>
-	      Medium
-        </p>
-	</div>
-				<div class="col span_1_of_4">
-	    <p>DOWNLOAD RESOURCES<br>
-          <a href="INL_PREP_Virtual_Playbook.pdf" target="_blank"><img src="images/Download.png" alt="" width="80" height="80" border="0"/></a>	<br>
-	      Grab it!
-        </p>
-	</div>
-</div></div>
-	<div id="playbook">
-<div class="section group">
-  <div class="col span_2_of_3">
-  <div class="step">Step 1</div>
-  <h2> Take a Self - Assessment</h2>
-  <p>Identify  your strengths and growth areas  in TB M&amp;E across the following domains: </p>
-  <p>1. Epidemiology of Tuberculosis</p>
-  <p>2.  M&amp;E Fundamentals</p>
-  <p>3. Data Quality</p>
-  <p>4.  Data Analysis, Interpretation and Visualization</p>
-  <p>5. Data Communication and Use or Data for Decision Making</p>
-	</div>
-	<div class="col span_1_of_3"><br>
-	<div class="side_box" style="margin-top: 250px;"><img src="images/pro_tip.png" width="50" height="50" alt="check"/>
-	  <h4>Pro Tip</h4>
-	  <p>Check out the Knowledge Center for Key resources in each topic area.</p>
-	</div>
-	</div></div>
+<div id="banner">
+	<img alt="logos" src="images/USAID_TB DIAH_vert.svg">
+		   </div>
+<div id="course-banner">
+<div class="content">	<h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
+	<h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
+</div>
+</div>
+<div class="content">
+			  <p><img src="images/Time.png" width="25" height="25" alt="clock"/> Time to Complete: 2.5 hours  <img src="images/pro_tip.png" width="25" height="25" alt="clock"/> Available in: English | French | Portugeuse | Russian</p>
+<div id="playbook">
+  <div class="section group"></div>
 	<div class="section group">
 	<div class="col span_2_of_3">
-	<div class="step">Step 2</div>
-  <h2>Start Learning</h2>
-  <a class="button" href="#">Launch Course </a>
-  <ul>
-  </ul>
+	  <p>Despite being preventable, treatable, and curable, tuberculosis (TB) claims the lives of 1.6 million people annually (WHO, 2022) and remains the world’s leading infectious disease killer. To reach every person with tuberculosis, cure those in need of treatment, prevent new infections and progression to active TB disease, while scaling up innovations in detection, care, and treatment and fostering local ownership to sustain TB programs, we need people around the world with the capacity to rise to the urgent challenge.</p>
+	  <p>This online learning experience is designed for dedicated professionals working to end TB in their countries. It provides essential information and guidance on how to effectively monitor and evaluate the performance of TB programs using a performance-based framework.</p>
+	  <p>This course requires a basic understanding of TB M&amp;E and surveillance systems and explores how a performance-based M&amp;E framework with standardized, high-quality indicators can improve the generation of quality data and support the analysis, interpretation and use of that data to inform programming, identify gaps, and strengthen the overall system.	  </p>
 	</div>
-		<div class="col span_1_of_3"><br>
-	<div class="side_box" style="margin-top: 100px;"><img src="images/pro_tip.png" width="50" height="50" alt="check"/>
-	  <h4>Pro Tip</h4>
-	  <br><br>
-	</div>
-		</div></div>
+		<div class="col span_1_of_3">
+		  <h2>Who is this course for:</h2>
+Anyone working towards improving TB data collection, reporting, analysis, and interested in how to use a performance-based monitoring and evaluation framework to bring improvement in National TB programs. This may  include USAID Mission staff working in TB, TB STAR advisors embedded in a National TB Control Program, USAID implementing partners, National TB program managers and M&amp;E staff members, TB researchers, and global TB development partners.
+</p>
+<h2>What do you need to get started?</h2>
+<ul>
+  <li> Willingness and motivation to learn</li>
+  <li> Computer or Mobile device with internet access</li>
+  <li> Basic understanding of TB and M&amp;E fundamentals</li>
+</ul>
+<br>
+	</div></div>
 	  <div class="section group">
 	    <div class="col span_2_of_3">
-	   <div class="step">Step 3</div>
-  <h2>Share Your Experience</h2>
-  <p>Join our Community</p>
+	
+
 	    </div>
 		<div class="col span_1_of_3"><br>
-	<div class="side_box" style="margin-top: 150px;"><img src="images/pro_tip.png" width="50" height="50" alt="check"/>
-	  <h4>Pro Tip</h4>
-	  <p> <br>
-	  </p>
-	</div>
 		</div>
-</div>
-
-
-
-</body>
-</html>	
-
+</div></div></div>
+	<div id="footer">Footer </div>
 </body>
 </html>
