--- a/resources.html
+++ b/resources.html
@@ -10,8 +10,26 @@
 
 <body>
 <div id="banner"></div>
-	<div id="content">
-		<h2>Check out these Resources</h2>
+	<div class="content">
+<div class="progress-container">
+  <p>Your Progress</p>
+  <input type="radio" class="radio" name="progress" value="zero" id="zero" checked>
+  <label for="zero" class="label">Self-Assessment</label>  
+  <input type="radio" class="radio" name="progress" value="twenty" id="twenty">
+  <label for="twenty" class="label">Optional <br>Pre-Readings</label>
+  <input type="radio" class="radio" name="progress" value="forty" id="forty">
+  <label for="forty" class="label">Complete Coursework</label>
+  
+  <input type="radio" class="radio" name="progress" value="sixty" id="sixty">
+  <label for="sixty" class="label">Course Evaluation</label>
+  
+  <input type="radio" class="radio" name="progress" value="eighty" id="eighty">
+  <label for="eighty" class="label">Receive Your Certificate</label>
+	  <div class="progress">
+    <div class="progress-bar"></div>
+  </div>
+</div>	
+<h2>Optional Pre-Readings</h2>
 	<div class="accordion">
   <div class="accordion-item">
     <div class="accordion-header">
@@ -19,8 +37,10 @@
       <span class="accordion-icon"></span>
     </div>
     <div class="accordion-content">
-      <p>This is a resource</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae velit sodales, efficitur sapien in, vestibulum leo. Sed bibendum tellus vel sapien malesuada ullamcorper. Nulla nec tellus tristique, bibendum purus non, semper tortor.</p>
+      <p>The Basics:</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae velit sodales, efficitur sapien in, vestibulum leo. Sed bibendum tellus vel sapien malesuada ullamcorper. Nulla nec tellus tristique, bibendum purus non, semper tortor.</p><br>
+Dive Deeper:
+	
     </div>
   </div>
   <div class="accordion-item">
