--- a/congrats.html
+++ b/congrats.html
@@ -8,19 +8,45 @@
 <link href="css/main.css" rel="stylesheet" type="text/css">
 <link href="css/grid.css" rel="stylesheet" type="text/css">	
 </head>
-
 <body>
-<div id="banner"></div>
-	<div id="content"> <h1 style="text-align: center;">Congratulations!<br/><br>
-You have completed the course!</h1>
+<div id="banner"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></div>
+		
+	<div class="content">
+	<div class="progress-container">
+  <h3>Your Progress</h3>
+
+  <input type="radio" class="radio" name="progress" value="zero" id="zero" checked>
+  <label for="zero" class="label">Self-Assessment</label>
+  
+  <input type="radio" class="radio" name="progress" value="twenty" id="twenty">
+  <label for="twenty" class="label">Optional <br>Pre-Readings</label>
+  
+  <input type="radio" class="radio" name="progress" value="forty" id="forty">
+  <label for="forty" class="label">Complete Coursework</label>
+  
+  <input type="radio" class="radio" name="progress" value="sixty" id="sixty">
+  <label for="sixty" class="label">Course Evaluation</label>
+  
+  <input type="radio" class="radio" name="progress" value="eighty" id="eighty">
+  <label for="eighty" class="label">Receive Your Certificate</label>
+	  <div class="progress">
+    <div class="progress-bar"></div>
+  </div>
+</div>	
+ <h1 style="text-align: center;">Congratulations!<br/><br>
+You have completed the self-assessment!<br>
+<br>
+You can review the <a href="resources.html">pre-readings</a> or <br>
+<a href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">launch the course</a> </h1>
 <canvas id="confetti-canvas"></canvas>
  <div id="confetti-container" style="display:none;"></div>
+</div>
 	<!-- Include the canvas-confetti library -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 
   <!-- Include your confetti.js file -->
   <script src="confetti.js" type="text/javascript"></script>
-</div>
+
 	
 </body>
 </html>
