--- a/resources.html
+++ b/resources.html
@@ -10,12 +10,12 @@
 
 <body>
 <div id="banner"></div>
-	<div class="content">
+<div class="content">
 <div class="progress-container">
-  <p>Your Progress</p>
+  <p><strong>Your Progress</strong></p>
   <input type="radio" class="radio" name="progress" value="zero" id="zero" checked>
   <label for="zero" class="label">Self-Assessment</label>  
-  <input type="radio" class="radio" name="progress" value="twenty" id="twenty">
+  <input type="radio" class="radio" name="progress" value="twenty" id="twenty" checked>
   <label for="twenty" class="label">Optional <br>Pre-Readings</label>
   <input type="radio" class="radio" name="progress" value="forty" id="forty">
   <label for="forty" class="label">Complete Coursework</label>
@@ -33,28 +33,111 @@
 	<div class="accordion">
   <div class="accordion-item">
     <div class="accordion-header">
-      <h3>Epidemiology of TB</h3>
+      <h3>TB Monitoring, Evaluation &amp; Surveillance: An Overview</h3>
       <span class="accordion-icon"></span>
     </div>
     <div class="accordion-content">
-      <p>The Basics:</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae velit sodales, efficitur sapien in, vestibulum leo. Sed bibendum tellus vel sapien malesuada ullamcorper. Nulla nec tellus tristique, bibendum purus non, semper tortor.</p><br>
-Dive Deeper:
-	
+<p><strong>Must Read:</strong></p>
+<ul>
+  <li><a href="https://www.usaid.gov/global-health/health-areas/tuberculosis/resources/publications/usaid-global-tuberculosis-strategy-2023-2030" target="_blank">USAID&rsquo;s  Global Tuberculosis (TB) Strategy</a></li>
+  <li><a href="https://www.stoptb.org/advocacy-and-communications/unhlm-tb-key-targets-and-commitments" target="_blank">UN  High-Level Meeting on TB Key Targets &amp; Commitments (6 languages)</a></li>
+  <li><a href="https://www.who.int/publications/i/item/WHO-HTM-TB-2015.19" target="_blank">World  Health Organization (WHO): The End TB Strategy</a></li>
+</ul>
+<p><strong>Good to Know:</strong></p>
+<ul>
+  <li><a href="https://www.tbdiah.org/countries/" target="_blank">TB DIAH  Country Pages</a></li>
+  <li><a href="https://hub.tbdiah.org/dashboards/countries" target="_blank">TB DIAH Country Dashboards</a></li>
+  <li><a href="https://www.paho.org/en/topics/tuberculosis" target="_blank">PAHO&rsquo;s TB page</a></li>
+  <li><a href="https://www.who.int/teams/global-tuberculosis-programme/data" target="_blank">WHO  Global Tuberculosis Report</a></li>
+</ul>
+<p><br>
+  <strong>Complementary Courses:</strong></p>
+<ul>
+  <li><a href="https://www.globalhealthlearning.org/course/m-e-fundamentals" target="_blank">Monitoring  and Evaluation Fundamentals</a>
+  </li>
+</ul>
     </div>
   </div>
   <div class="accordion-item">
     <div class="accordion-header">
-      <h3>Basics of Monitoring, Evaluation and Surveillance</h3>
+      <h3>Using a Performance-based  M&amp;E Framework</h3>
       <span class="accordion-icon"></span>
     </div>
     <div class="accordion-content">
-      <p>Accordion Content 2</p>
-      <p>Donec sed tellus sem. Vivamus sit amet lacus at mi lobortis vulputate. Nam condimentum eleifend aliquam. Praesent feugiat nibh quis quam iaculis, at ultricies orci pharetra. Sed tincidunt erat vel nulla sollicitudin venenatis. Ut ac erat fermentum, sollicitudin orci eget, iaculis ex. Sed vitae enim id elit consequat facilisis vel vel lectus.</p>
+	<p><strong>Must Read</strong></p>
+    <ul>
+      <li><a href="https://www.tbdiah.org/assessments/pbmef/">TB DIAH Knowledge Hub: The  Performance-based Monitoring and Evaluation Framework Resource Page </a></li>
+      <li><a href="https://hub.tbdiah.org/pbmef/indicators">TB DIAH  Data Hub: PBMEF Indicators</a></li>
+      <li>Indicator Reference Sheets (pull from PBMEF)</li>
+      <li>National Strategic Plans from the country where you work</li>
+    </ul>
     </div>
   </div>
-		</div>	</div>
-  <script src="accordion.js" type="text/javascript"></script>	
+		
+  <div class="accordion-item">
+    <div class="accordion-header">
+      <h3>Data Quality, Analysis and  Interpretation</h3>
+      <span class="accordion-icon"></span>
+    </div>
+    <div class="accordion-content">
+<p><strong>Must Read:</strong></p>
+<ul>
+  <li><a href="https://hub.tbdiah.org/pbmef/indicators" target="_blank">TB DIAH Data Hub: PBMEF Indicators</a></li>
+</ul>
+<p><strong>Good to Know:</strong></p>
+<ul>
+  <li><a href="https://www.complianceonline.com/resources/7-powerful-problem-solving-root-cause-analysis-tools.html" target="_blank">Root Cause Analysis </a></li>
+  <li><a href="https://www.measureevaluation.org/our-work/data-quality/data-quality-review.html" target="_blank">Data  Quality Review Toolkit</a></li>
+  <li><a href="https://www.measureevaluation.org/our-work.html" target="_blank">MEASURE  Evaluation Resources</a></li>
+</ul>
+<p><strong><br>
+  Excel Basics </strong></p>
+<ul>
+  <li>Udemy: <a href="https://www.udemy.com/course/useful-excel-for-beginners/" target="_blank">Useful Excel for Beginners</a> (Free)</li>
+  <li>Udemy: <a href="https://www.udemy.com/course/create-well-designed-excel-graphs/" target="_blank">Microsoft Excel – Basic Data  Visualization in Excel</a></li>
+  <li>YouTube: <a href="https://www.youtube.com/watch?v=Vl0H-qTclOg" target="_blank">Excel from the Beginning</a><br>
+  </li>
+</ul><br>
 
+<p><strong>Complementary Courses:</strong></p>
+<ul>
+  <li><a href="https://www.globalhealthlearning.org/course/data-quality" target="_blank">Global Health Learning Center: Data  Quality</a><u> </u></li>
+  <li><a href="https://www.irex.org/resource/data-learning-journey-playbook-guide-building-data-skills-everyone" target="_blank">IREX&rsquo;s Data Learning  Journey (DLJ) Playbook</a>: A guide to building data skills for everyone</li>
+</ul>
+    </div>
+  </div>
+		  <div class="accordion-item">
+    <div class="accordion-header">
+      <h3>Data Communication &amp; Use</h3>
+      <span class="accordion-icon"></span>
+    </div>
+    <div class="accordion-content">
+	    <strong>Good to Know:</strong><br>
+			<ul>
+	  <li><a href="ttps://www.measureevaluation.org/our-work/data-demand-and-use.html">Data Demand and Use</a>  </li>
+	   <li> <a href="https://depictdatastudio.com/blog/">The Data  Visualization Design Process: A Step-by-Step Guide for Beginners</a> </li>
+
+<li><a href="https://www.globalhealthlearning.org/course/data-use-program-managers" target="_blank">Global Health Learning: Data Use  for Program Managers</a></li>
+<li><a href="https://thecompassforsbc.org/how-to-guide/how-conduct-stakeholder-workshop" target="_blank"> How to  Conduct a Stakeholder Works</a></li>
+		  </ul>
+	</div></div>
+		  <div class="accordion-item">
+    <div class="accordion-header">
+      <h3>Other Resources</h3>
+      <span class="accordion-icon"></span>
+    </div>
+    <div class="accordion-content">
+      <ul>
+        <li><a href="https://tbksp.org/en/guidance-books-solr">WHO </a><a href="https://tbksp.org/en/guidance-books-solr">Consolidated Guidelines</a> </li>
+           <li><a href="https://tbksp.org/en/implementation-books-solr">WHO  Operational Handbooks </a> </li>
+           <li><a href="https://tbksp.org/en/training-catalogue">WHO TB  Knowledge Sharing - Training Catalogue</a>
+        </li>
+      </ul>
+    </div>
+  </div>	
+	
+
+	</div>
+      <script src="accordion.js" type="text/javascript"></script>	
 </body>
 </html>
