--- a/congrats.html
+++ b/congrats.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="banner"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></div>
-		
+<div id="course-banner">Using a Performance-based M&E Framework to Strengthen TB Programs</div>		
 	<div class="content">
 	<div class="progress-container">
   <h3>Your Progress</h3>
@@ -33,11 +33,31 @@
     <div class="progress-bar"></div>
   </div>
 </div>	
- <h1 style="text-align: center;">Congratulations!<br/><br>
-You have completed the self-assessment!<br>
-<br>
-You can review the <a href="resources.html">pre-readings</a> or <br>
-<a href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">launch the course</a> </h1>
+ <h1 style="text-align: center;">Congratulations for completing your self-assessment!
+	 </h1>
+ <div class="section group">
+	<div class="col span_1_of_3">Pre-reading image</div>
+	<div class="col span_2_of_3">
+	<a href="https://tally.so/r/mJq8EK" target="_blank">Self - Assessment</a> | <a href="resources.html">Pre-readings</a></div>
+	</div> 
+	 	 <div class="section group">
+	<div class="col span_1_of_3">Module 1</div>
+	<div class="col span_2_of_3">
+	 <a href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">1. TB M&amp;E: An Overview</a></div>
+	</div> 
+	 	 	 <div class="section group">
+	<div class="col span_1_of_3">Module 2</div>
+	<div class="col span_2_of_3">
+2. The PBMEF</div>
+	</div> 
+	 	 	 <div class="section group">
+	<div class="col span_1_of_3">Module 3</div>
+	<div class="col span_2_of_3">3. Data Quality, Anaysis, and Interpretation</div>
+	</div> 
+	 	 	 <div class="section group">
+	<div class="col span_1_of_3">Module 4</div>
+	<div class="col span_2_of_3">3. Data Communication and Use</div>
+	</div> 
 <canvas id="confetti-canvas"></canvas>
  <div id="confetti-container" style="display:none;"></div>
 </div>
