--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ s0.parentNode.insertBefore(s1,s0);
 </div>
 </div>
 <div class="content">
-			  <p><img src="images/Time.png" width="25" height="25" alt="clock"/> Time to Complete: 2.5 hours  <img src="images/pro_tip.png" width="25" height="25" alt="clock"/> Available in: English | French | Portugeuse | Russian</p>
+			  <p><img src="images/Time.png" width="25" height="25" alt="clock"/> Time to Complete: 2.5 -3 hours  <img src="images/pro_tip.png" width="25" height="25" alt="clock"/> Available in: English | French | Portugeuse | Russian</p>
 <div id="playbook">
   <div class="section group"></div>
 	<div class="section group">
@@ -49,9 +49,8 @@ s0.parentNode.insertBefore(s1,s0);
 	</div>
 		<div class="col span_1_of_3">
 		  <h2>Who is this course for:</h2>
-Anyone working towards improving TB data collection, reporting, analysis, and interested in how to use a performance-based monitoring and evaluation framework to bring improvement in National TB programs. This may  include USAID Mission staff working in TB, TB STAR advisors embedded in a National TB Control Program, USAID implementing partners, National TB program managers and M&amp;E staff members, TB researchers, and global TB development partners.
-</p>
-<h2>What do you need to get started?</h2>
+ 
+          <h2>What do you need to get started?</h2>
 <ul>
   <li> Willingness and motivation to learn</li>
   <li> Computer or Mobile device with internet access</li>
@@ -61,8 +60,9 @@ Anyone working towards improving TB data collection, reporting, analysis, and in
 	</div></div>
 	  <div class="section group">
 	    <div class="col span_2_of_3">
-	
-
+	      <p>Module 1: TB M&amp;E: An Overview</p>
+	      <p>Module 2: </p>
+	      <p>&nbsp;</p>
 	    </div>
 		<div class="col span_1_of_3"><br>
 		</div>
