--- a/resources.html
+++ b/resources.html
@@ -2,14 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TB M&E Resources</title>
-<link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">	
+<meta property="og:title" content="M&amp;E and Surveillance of TB Programs" />
+<meta property="og:image" content="to add "/>
+<meta name="description" content="to add" />
+<meta name="keywords" content="TB, tuberculosis, TB DIAH, USAID, monitoring and evaluation of TB programs" />
+<meta http-equiv="content-language" content="en">
+<title>Online Learning: M&amp;E of TB Programs</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200;300;400;500;600;700;800&family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet" type="text/css">
 <link href="css/grid.css" rel="stylesheet" type="text/css">	
+<meta name="viewport" content="width=device-width, user-scalable=no"/>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6402352131ebfa0fe7f086fa/1gqk9v32a';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->	
 </head>
-
 <body>
-<div id="banner"></div>
+<div id="banner"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></div>
+<div id="course-banner">Using a Performance-based M&E Framework to Strengthen TB Programs</div>		
+	<div class="content">
 <div class="content">
 <div class="progress-container">
   <p><strong>Your Progress</strong></p>
