--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <title>Online Learning: M&amp;E of TB Programs</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200;300;400;500;600;700;800&family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200;300;400;500;600;700;800&family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet"> 
 <link href="css/main.css" rel="stylesheet" type="text/css">
 <link href="css/grid.css" rel="stylesheet" type="text/css">	
 <meta name="viewport" content="width=device-width, user-scalable=no"/>
@@ -48,15 +50,8 @@ s0.parentNode.insertBefore(s1,s0);
 	  <p>This course requires a basic understanding of TB M&amp;E and surveillance systems and explores how a performance-based M&amp;E framework with standardized, high-quality indicators can improve the generation of quality data and support the analysis, interpretation and use of that data to inform programming, identify gaps, and strengthen the overall system.	  </p>
 	</div>
 		<div class="col span_1_of_3">
-		  <h2>Who is this course for:</h2>
- 
-          <h2>What do you need to get started?</h2>
-<ul>
-  <li> Willingness and motivation to learn</li>
-  <li> Computer or Mobile device with internet access</li>
-  <li> Basic understanding of TB and M&amp;E fundamentals</li>
-</ul>
-<br>
+<div style="padding: 20px;">	  <h2>Course Resources:</h2>
+		<br></div>
 	</div></div>
 	  <div class="section group">
 	    <div class="col span_2_of_3">
