new congrats page

--- a/congrats.html
+++ b/congrats.html
@@ -14,73 +14,21 @@
 <link href="css/main.css" rel="stylesheet" type="text/css">
 <link href="css/grid.css" rel="stylesheet" type="text/css">	
 <meta name="viewport" content="width=device-width, user-scalable=no"/>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6402352131ebfa0fe7f086fa/1gqk9v32a';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->	
 </head>
-<body>
+<body id="clapping-bg">
 <div id="banner"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></div>
-<div id="course-banner">Using a Performance-based M&E Framework to Strengthen TB Programs</div>		
-	<div class="content">
-	<div class="progress-container">
-  <h3>Your Progress</h3>
-
-  <input type="radio" class="radio" name="progress" value="zero" id="zero" checked>
-  <label for="zero" class="label">Self-Assessment</label>
-  
-  <input type="radio" class="radio" name="progress" value="twenty" id="twenty">
-  <label for="twenty" class="label">Optional <br>Pre-Readings</label>
-  
-  <input type="radio" class="radio" name="progress" value="forty" id="forty">
-  <label for="forty" class="label">Complete Coursework</label>
-  
-  <input type="radio" class="radio" name="progress" value="sixty" id="sixty">
-  <label for="sixty" class="label">Course Evaluation</label>
-  
-  <input type="radio" class="radio" name="progress" value="eighty" id="eighty">
-  <label for="eighty" class="label">Receive Your Certificate</label>
-	  <div class="progress">
-    <div class="progress-bar"></div>
-  </div>
+<div id="course-banner">
+<div class="content">	<h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
+	<h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
+</div>
 </div>	
- <h1 style="text-align: center;">Congratulations for completing your self-assessment!
-	 </h1>
- <div class="section group">
-	<div class="col span_1_of_3">Pre-reading image</div>
-	<div class="col span_2_of_3">
-	<a href="https://tally.so/r/mJq8EK" target="_blank">Self - Assessment</a> | <a href="resources.html">Pre-readings</a></div>
-	</div> 
-	 	 <div class="section group">
-	<div class="col span_1_of_3">Module 1</div>
-	<div class="col span_2_of_3">
-	 <a href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">1. TB M&amp;E: An Overview</a></div>
-	</div> 
-	 	 	 <div class="section group">
-	<div class="col span_1_of_3">Module 2</div>
-	<div class="col span_2_of_3">
-2. The PBMEF</div>
-	</div> 
-	 	 	 <div class="section group">
-	<div class="col span_1_of_3">Module 3</div>
-	<div class="col span_2_of_3">3. Data Quality, Anaysis, and Interpretation</div>
-	</div> 
-	 	 	 <div class="section group">
-	<div class="col span_1_of_3">Module 4</div>
-	<div class="col span_2_of_3">3. Data Communication and Use</div>
-	</div> 
+	<div class="content" style="text-align: center">	 <br>	 
+<h1>Congratulations for completing your self-assessment! </h1>
+<p>You should receive an email with your results. Please email us at <strong><a href="mailto:elearning@tbdiah.org">elearning@tbdiah.org</a></strong> if you have any questions or need support.</p>
+	  <h1> <a class="button" href="index.html">Go to Course Home Page</a></h1>
+ 
 <canvas id="confetti-canvas"></canvas>
  <div id="confetti-container" style="display:none;"></div>
-</div>
 	<!-- Include the canvas-confetti library -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 
