--- a/congrats.html
+++ b/congrats.html
@@ -16,17 +16,18 @@
 <meta name="viewport" content="width=device-width, user-scalable=no"/>
 </head>
 <body id="clapping-bg">
-<div id="banner"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></div>
-<div id="course-banner">
-<div class="content">	<h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
-	<h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
-</div>
-</div>	
+	<div id="banner"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></div>	
 	<div class="content" style="text-align: center">	 <br>	 
 <h1>Congratulations for completing your self-assessment! </h1>
-<p>You should receive an email with your results. Please email us at <strong><a href="mailto:elearning@tbdiah.org">elearning@tbdiah.org</a></strong> if you have any questions or need support.</p>
-	  <h1> <a class="button" href="index.html">Go to Course Home Page</a></h1>
- 
+<p>You should receive an email with your results. <br>
+  Please email us at <strong><a href="mailto:elearning@tbdiah.org">elearning@tbdiah.org</a></strong> if you have any questions or need support.</p>
+	  <h2> <a class="button" href="index.html">🡺 Course Home Page</a></h2>
+	  <p>&nbsp;</p>
+	  <p>&nbsp;</p>
+	  <p>&nbsp;</p>
+	  <p>&nbsp;</p>
+	  <p>&nbsp;</p>
+	</div>
 <canvas id="confetti-canvas"></canvas>
  <div id="confetti-container" style="display:none;"></div>
 	<!-- Include the canvas-confetti library -->
