--- a/index.html
+++ b/index.html
@@ -44,47 +44,19 @@ s0.parentNode.insertBefore(s1,s0);
   <p>This online learning experience is designed for dedicated professionals working to end TB in their countries. It provides essential information and guidance on how to effectively monitor and evaluate the performance of TB programs using a performance-based framework.
     
     This course requires a basic understanding of TB M&E and surveillance systems and explores how a performance-based M&E framework with standardized, high-quality indicators can improve the generation of quality data and support the analysis, interpretation and use of that data to inform programming, identify gaps, and strengthen the overall system.	
-  </p>
-  <p>&nbsp;</p>
+</p>
 </div>
-  <div class="play_box">
-	    <div class="section group">
-	<div class="col span_1_of_4">
-	    <p>
-	      PREP TIME<br>
-	      <img src="images/prep_time.png" width="80" height="80" alt=""/>
-	      <br>
-	      5-15 minutes
-        </p>
-	</div>
-	<div class="col span_1_of_4">
- <p> COURSE TIME<br>
-	      <img src="images/Time.png" width="80" height="80" alt=""/>
-	      <br>
-	      2.5 Hours</p>
-	</div>
-	<div class="col span_1_of_4">
-	    <p>DIFFICULTY<br>
-	      <img src="images/Difficulty-medium.png" width="80" height="80" alt=""/>	<br>
-	      Medium
-        </p>
-	</div>
-				<div class="col span_1_of_4">
-	    <p>DOWNLOAD RESOURCES<br>
-          <a href="INL_PREP_Virtual_Playbook.pdf" target="_blank"><img src="images/Download.png" alt="" width="80" height="80" border="0"/></a>	<br>
-	      Grab it!
-        </p>
-	</div>
-</div></div>	
-	
-		<br>
+<br>
 	 <h2>Course Sections</h2>
 	
-	
-	<div class="section group">
-	<div class="col span_1_of_3">Pre-reading image</div>
+		<div class="section group">
+	<div class="col span_1_of_3">Self assessment image</div>
 	<div class="col span_2_of_3">
-	<a href="https://tally.so/r/mJq8EK" target="_blank">Self - Assessment</a> | <a href="resources.html">Pre-readings</a></div>
+	<a href="https://tally.so/r/mJq8EK" target="_blank">Self - Assessment</a></div>
+	</div> 
+  <div class="section group">
+	<div class="col span_1_of_3">Pre-reading image</div>
+	<div class="col span_2_of_3"><a href="resources.html">Pre-readings</a></div>
 	</div> 
 	 	 <div class="section group">
 	<div class="col span_1_of_3">Module 1</div>
@@ -105,11 +77,36 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_2_of_3">3. Data Communication and Use</div>
 		</div> 
 </div>
-	<div id="footer">
-	<div class="content"><p>The TB DIAH project is part of USAID's performance-based measures to end TB—the Global Accelerator to End Tuberculosis. The  <a href="https://www.tbdiah.org/" target="_blank" rel="noreferrer noopener">TB DIAH website</a> features a data hub, guidance, and tools to support the work of the   global TB community. TB DIAH makes possible optimal analysis and use of   TB data to inform national TB programs, policies, and USAID-supported   interventions. <br>
+<br>
+	<div class="play_box">
+	  <div class="section group">
+	    <div class="col span_1_of_4">
+	      <p> PREP TIME<br>
+	        <img src="images/prep_time.png" width="80" height="80" alt=""/> <br>
+	        5-15 minutes </p>
+        </div>
+	    <div class="col span_1_of_4">
+	      <p> COURSE TIME<br>
+	        <img src="images/Time.png" width="80" height="80" alt=""/> <br>
+	        2.5 Hours</p>
+        </div>
+	    <div class="col span_1_of_4">
+	      <p>DIFFICULTY<br>
+	        <img src="images/Difficulty-medium.png" width="80" height="80" alt=""/> <br>
+	        Medium </p>
+        </div>
+	    <div class="col span_1_of_4">
+	      <p>DOWNLOAD RESOURCES<br>
+	        <a href="INL_PREP_Virtual_Playbook.pdf" target="_blank"><img src="images/Download.png" alt="" width="80" height="80" border="0"/></a> <br>
+	        Grab it! </p>
+        </div>
+      </div>
+</div>
+	<br>
+<div id="footer">
+  <div class="content"><p>The TB DIAH project is part of USAID's performance-based measures to end TB—the Global Accelerator to End Tuberculosis. The  <a href="https://www.tbdiah.org/" target="_blank" rel="noreferrer noopener">TB DIAH website</a> features a data hub, guidance, and tools to support the work of the   global TB community. TB DIAH makes possible optimal analysis and use of   TB data to inform national TB programs, policies, and USAID-supported   interventions. <br>
 	    <br>
-This information was produced with the support of the <a href="https://www.usaid.gov/" target="_blank" rel="noreferrer noopener">United States Agency for International Development (USAID)</a> under the terms of the TB Data, Impact Assessment and Communications   Hub (TB DIAH) Associate Award No. 7200AA18LA00007. TB DIAH is   implemented by the University of North Carolina at Chapel Hill, in   partnership with John Snow, Inc. Views expressed are not necessarily   those of USAID or the United States government. </p>
-		<p>&nbsp;</p></div></div>
+This information was produced with the support of the <a href="https://www.usaid.gov/" target="_blank" rel="noreferrer noopener">United States Agency for International Development (USAID)</a> under the terms of the TB Data, Impact Assessment and Communications   Hub (TB DIAH) Associate Award No. 7200AA18LA00007. TB DIAH is   implemented by the University of North Carolina at Chapel Hill, in   partnership with John Snow, Inc. Views expressed are not necessarily   those of USAID or the United States government. </p></div></div>
 
 </body>
 </html>
