--- a/resources.html
+++ b/resources.html
@@ -30,28 +30,17 @@ s0.parentNode.insertBefore(s1,s0);
 </head>
 <body>
 <div id="banner"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></div>
-<div id="course-banner">Using a Performance-based M&E Framework to Strengthen TB Programs</div>		
-	<div class="content">
-<div class="content">
-<div class="progress-container">
-  <p><strong>Your Progress</strong></p>
-  <input type="radio" class="radio" name="progress" value="zero" id="zero" checked>
-  <label for="zero" class="label">Self-Assessment</label>  
-  <input type="radio" class="radio" name="progress" value="twenty" id="twenty" checked>
-  <label for="twenty" class="label">Optional <br>Pre-Readings</label>
-  <input type="radio" class="radio" name="progress" value="forty" id="forty">
-  <label for="forty" class="label">Complete Coursework</label>
-  
-  <input type="radio" class="radio" name="progress" value="sixty" id="sixty">
-  <label for="sixty" class="label">Course Evaluation</label>
-  
-  <input type="radio" class="radio" name="progress" value="eighty" id="eighty">
-  <label for="eighty" class="label">Receive Your Certificate</label>
-	  <div class="progress">
-    <div class="progress-bar"></div>
+<div id="course-banner">
+  <div class="content">
+    <h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
+    <h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
   </div>
-</div>	
-<h2>Optional Pre-Readings</h2>
+</div>
+<div class="content">
+	<div id="breadcrumbs"> <a href="index.html">Course Home</a> »  Pre-Reading </div>
+
+<h2>Optional Pre-Reading</h2>
+	<p> If you scored below 50 on your self-assessment, you may wan to review the resources below. Some of these resources will also be available in the course.</p>
 	<div class="accordion">
   <div class="accordion-item">
     <div class="accordion-header">
@@ -140,7 +129,7 @@ s0.parentNode.insertBefore(s1,s0);
 	   <li> <a href="https://depictdatastudio.com/blog/">The Data  Visualization Design Process: A Step-by-Step Guide for Beginners</a> </li>
 
 <li><a href="https://www.globalhealthlearning.org/course/data-use-program-managers" target="_blank">Global Health Learning: Data Use  for Program Managers</a></li>
-<li><a href="https://thecompassforsbc.org/how-to-guide/how-conduct-stakeholder-workshop" target="_blank"> How to  Conduct a Stakeholder Works</a></li>
+<li><a href="https://thecompassforsbc.org/how-to-guide/how-conduct-stakeholder-workshop" target="_blank"> How to  Conduct a Stakeholder Workshop</a></li>
 		  </ul>
 	</div></div>
 		  <div class="accordion-item">
@@ -157,9 +146,9 @@ s0.parentNode.insertBefore(s1,s0);
       </ul>
     </div>
   </div>	
-	
+  </div>
 
-	</div>
+</div>
       <script src="accordion.js" type="text/javascript"></script>	
 </body>
 </html>
