updates to courses

--- a/index.html
+++ b/index.html
@@ -43,40 +43,53 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="playbook">
   <p>This online learning experience is designed for dedicated professionals working to end TB in their countries. It provides essential information and guidance on how to effectively monitor and evaluate the performance of TB programs using a performance-based framework.
     
-    This course requires a basic understanding of TB M&E and surveillance systems and explores how a performance-based M&E framework with standardized, high-quality indicators can improve the generation of quality data and support the analysis, interpretation and use of that data to inform programming, identify gaps, and strengthen the overall system.	
-</p>
+    This course requires a basic understanding of TB M&E and surveillance systems and explores how a performance-based M&E framework with standardized, high-quality indicators can improve the generation of quality data and support the analysis, interpretation and use of that data to inform programming, identify gaps, and strengthen the overall system.    </p>
+  <p><strong>START</strong> with a quick <a href="https://tally.so/r/mJq8EK" target="_blank">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.<br>
+  </p>
 </div>
 <br>
 	 <h2>Course Sections</h2>
-	
-		<div class="section group">
-	<div class="col span_1_of_3">Self assessment image</div>
-	<div class="col span_2_of_3">
-	<a href="https://tally.so/r/mJq8EK" target="_blank">Self - Assessment</a></div>
-	</div> 
-  <div class="section group">
-	<div class="col span_1_of_3">Pre-reading image</div>
-	<div class="col span_2_of_3"><a href="resources.html">Pre-readings</a></div>
-	</div> 
+  <div class="section group"> 
 	 	 <div class="section group">
-	<div class="col span_1_of_3">Module 1</div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/m1-photo.jpg" width="1680" height="840" alt=""/></div></div>
 	<div class="col span_2_of_3">
-	 <a href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">1. TB M&amp;E: An Overview</a></div>
+	  <div class="modules">
+	    <h3><a href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">MODULE 1: TB M&amp;E: An Overview</a></h3>
+	    <p>Time to Complete: 15 minutes</p>
+	    <p>Topics Covered: Basic epidemiology of TB, TB case definitions, global TB strategies, M&amp;E frameworks</p>
+	  </div></div>
 	</div> 
 	 	 	 <div class="section group">
-	<div class="col span_1_of_3">Module 2</div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
+	<div class="col span_2_of_3"><div class="modules">
+      <h3>MODULE 2: Use Performance-Based M&amp;E Framework to Stregthen TB Programs</h3>
+      <p>Time to Complete: 15 minutes<br>
+        <br>
+        Topics Covered:
+		</p></div>
+	</div>
+	</div> 
+	 	 	 <div class="section group">
+	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
 	<div class="col span_2_of_3">
-2. The PBMEF</div>
+	  <div class="modules">
+	  <h3>MODULE: 3: Data Quality, Anaysis, and Interpretation</h3>
+	  <p>Time to Complete: 45 minutes<br>
+        <br>
+Topics Covered: Cascade Analysis, root cause analysis, etc.</p>
+	</div></div>
 	</div> 
 	 	 	 <div class="section group">
-	<div class="col span_1_of_3">Module 3</div>
-	<div class="col span_2_of_3">3. Data Quality, Anaysis, and Interpretation</div>
-	</div> 
-	 	 	 <div class="section group">
-	<div class="col span_1_of_3">Module 4</div>
-	<div class="col span_2_of_3">3. Data Communication and Use</div>
-		</div> 
-</div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
+	<div class="col span_2_of_3">
+	  <div class="modules">
+	  <h3>MODULE 4: Data Communication and Use</h3>
+	  <p>Time to Complete: 45 minutes<br>
+	    <br>
+	    Topics Covered: Cascade Analysis, root cause analysis, etc.</p>
+    </div>
+		</div></div>  
+</div></div>
 <br>
 	<div class="play_box">
 	  <div class="section group">
@@ -102,7 +115,7 @@ s0.parentNode.insertBefore(s1,s0);
         </div>
       </div>
 </div>
-	<br>
+	<br>	
 <div id="footer">
   <div class="content"><p>The TB DIAH project is part of USAID's performance-based measures to end TB—the Global Accelerator to End Tuberculosis. The  <a href="https://www.tbdiah.org/" target="_blank" rel="noreferrer noopener">TB DIAH website</a> features a data hub, guidance, and tools to support the work of the   global TB community. TB DIAH makes possible optimal analysis and use of   TB data to inform national TB programs, policies, and USAID-supported   interventions. <br>
 	    <br>
