--- a/congrats.html
+++ b/congrats.html
@@ -22,11 +22,8 @@
 <p>You should receive an email with your results. <br>
   Please email us at <strong><a href="mailto:elearning@tbdiah.org">elearning@tbdiah.org</a></strong> if you have any questions or need support.</p>
 	  <h2> <a class="button" href="index.html">🡺 Course Home Page</a></h2>
-	  <p>&nbsp;</p>
-	  <p>&nbsp;</p>
-	  <p>&nbsp;</p>
-	  <p>&nbsp;</p>
-	  <p>&nbsp;</p>
+		<div style="margin-bottom: 340px;"></div>
+	
 	</div>
 <canvas id="confetti-canvas"></canvas>
  <div id="confetti-container" style="display:none;"></div>
