--- a/resources.html
+++ b/resources.html
@@ -29,14 +29,19 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->	
 </head>
 <body>
-<div id="banner"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></div>
+<div id="banner">
+  <div class="content"><img alt="logos" src="images/USAID_TB DIAH_vert.svg">
+    <div id="languages"> EN | FR | PT | RU </div>
+  </div>
+</div>
 <div id="course-banner">
   <div class="content">
     <h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
     <h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
   </div>
 </div>
-<div class="content">
+<div class="content"><br>
+
 	<div id="breadcrumbs"> <a href="index.html">Course Home</a> »  Pre-Reading </div>
 
 <h2>Optional Pre-Reading</h2>
@@ -147,7 +152,7 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
   </div>	
   </div>
-
+<h2> <a class="button" href="index.html">🡸 Course Home Page</a></h2>
 </div>
       <script src="accordion.js" type="text/javascript"></script>	
 </body>
