--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ s0.parentNode.insertBefore(s1,s0);
 </head>
 <body>
 <div id="banner">
-	<img alt="logos" src="images/USAID_TB DIAH_vert.svg">
-		   </div>
+	<div class="content"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"> <div id="languages"> EN | FR | PT | RU </div>
+		  </div></div>
 <div id="course-banner">
 <div class="content">	<h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
 	<h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
@@ -44,7 +44,7 @@ s0.parentNode.insertBefore(s1,s0);
   <p>This online learning experience is designed for dedicated professionals working to end TB in their countries. It provides essential information and guidance on how to effectively monitor and evaluate the performance of TB programs using a performance-based framework.
     
     This course requires a basic understanding of TB M&E and surveillance systems and explores how a performance-based M&E framework with standardized, high-quality indicators can improve the generation of quality data and support the analysis, interpretation and use of that data to inform programming, identify gaps, and strengthen the overall system.    </p>
-  <p><strong>START</strong> with a quick <a href="https://tally.so/r/mJq8EK" target="_blank">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.<br>
+  <p><strong>START</strong> with a quick <a href="self-assessment.html" target="_blank">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.<br>
   </p>
 </div>
 <br>
